ME_4600/MESDK/ME-4000/VC/DLLInit.h


typedef   int(__cdecl *PF_ME4000AOSINGLESIMULTANEOUS(unsigned int uiBoardNumber, unsigned int* puiChannelNumber, unsigned long ulCount, int iTriggerMode, int* piExtTriggerEnable, int* piExtTriggerEdge, unsigned long ulTimeOutSeconds, short* psValue);

typedef   int(__cdecl *PF_ME4000AOSTARTSYNCHRONOUS(unsigned int uiBoardNumber, unsigned int* puiChannelNumber, unsigned long ulCount, int iTriggerMode, int* piExtTriggerEnable, int* piExtTriggerEdge, unsigned long ulTimeOutSeconds);


int me4000CntRead(
    unsigned int uiBoardNumber,
    int iCounter,
    unsigned short *pusValue);


int me4000CntPWMStart(
    unsigned int uiBoardNumber,
    unsigned int uiPreScaler,
    int iDutyCycle);


int me4000CntPWMStop(
    unsigned int uiBoardNumber);


int me4000ExtIrqEnable(
    unsigned int uiBoardNumber,
    ME4000_P_EXT_IRQ_PROC pExtIrqProc,
    void* pExtIrqContext);


int me4000ExtIrqDisable(
    unsigned int uiBoardNumber);


int me4000ExtIrqGetCount(
    unsigned int uiBoardNumber,
    unsigned int *puiIrqCount);


int me4000DIOBPPortConfig(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    int iOutputMode);


int me4000DIOBPConfig(
    unsigned int uiBoardNumber,
    unsigned long ulTicks,
    int iTriggerMode,
    int iExtTriggerEdge);


int me4000DIOBPWraparound(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    unsigned long ulLoops,
    int iExecutionMode,
    ME4000_P_DIOBP_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int me4000DIOBPStart(
    unsigned int uiBoardNumber);


int me4000DIOBPAppendNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToAppend,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesAppended);


int me4000DIOBPStop(
    unsigned int uiBoardNumber,
    int iStopMode);


int me4000DIOBPReset(
    unsigned int uiBoardNumber);


int me4000DIOBPGetStatus(
    unsigned int uiBoardNumber,
    int iWaitIdle,
    int* piStatus);


int me4000MultiSigOpen(
    unsigned int uiBoardNumber);


int me4000MultiSigReset(
    unsigned int uiBoardNumber);


int me4000MultiSigAddressLED(
    unsigned int uiBoardNumber,
    unsigned int uiBase,
    int iLEDStatus);


int me4000MultiSigSetGain(
    unsigned int uiBoardNumber,
    unsigned int uiBase,
    int iChannelGroup,
    int iGain);


int me4000MultiSigClose(
    unsigned int uiBoardNumber);


int me4000MultiSigAIOpen(
    unsigned int uiBoardNumber);


int me4000MultiSigAISingle(
    unsigned int uiBoardNumber,
    unsigned int uiAIChannelNumber,
    unsigned int uiMuxChannelNumber,
    int iGain,
    int iTriggerMode,
    int iExtTriggerEdge,
    unsigned long ulTimeOutSeconds,
    short* psDigitalValue);


int me4000MultiSigAIConfig(
    unsigned int uiBoardNumber,
    unsigned int uiAIChannelNumber,
    unsigned char *pucMuxChanList,
    unsigned int uiMuxChanListCount,
    unsigned long ulReserved,
    unsigned long ulChanTicks,
    unsigned long ulScanTicksLow,
    unsigned long ulScanTicksHigh,
    int iAcqMode,
    int iExtTriggerMode,
    int iExtTriggerEdge);


int me4000MultiSigAIScan(
    unsigned int uiBoardNumber,
    unsigned int uiNumberOfMuxLists,
    short* psBuffer,
    unsigned long ulBufferSizeValues,
    int iExecutionMode,
    ME4000_P_AI_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned int uiRefreshFrequency,
    ME4000_P_AI_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int me4000MultiSigAIContinuous(
    unsigned int uiBoardNumber,
    ME4000_P_AI_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned int uiRefreshFrequency,
    unsigned long ulTimeOutSeconds);


int me4000MultiSigAIStart(
    unsigned int uiBoardNumber);


int me4000MultiSigAIGetNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToRead,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesRead,
    int* piLastError);


int me4000MultiSigAIStop(
    unsigned int uiBoardNumber,
    int iReserved);


int me4000MultiSigAIExtractValues(
    unsigned int uiMuxChannelNumber,
    short* psAIBuffer,
    unsigned long ulAIDataCount,
    unsigned char *pucMuxChanList,
    unsigned int uiMuxChanListCount,
    short* psChanBuffer,
    unsigned long ulChanBufferSizeValues,
    unsigned long* pulChanDataCount);


int me4000MultiSigAIDigitToSize(
    short sDigit,
    int iGain,
    int iModuleType,
    double dIMeasured,
    double* pdSize);


int me4000MultiSigAIReset(
    unsigned int uiBoardNumber);


int me4000MultiSigAIGetStatus(
    unsigned int uiBoardNumber,
    int iWaitIdle,
    int* piStatus);


int me4000MultiSigAIClose(
    unsigned int uiBoardNumber);


int me4000MultiSigAOOpen(
    unsigned int uiBoardNumber);


int me4000MultiSigAOSingle(
    unsigned int uiBoardNumber,
    unsigned int uiDemuxChannelNumber,
    int iTriggerMode,
    int iReserved,
    unsigned long ulReserved,
    short sValue);


int me4000MultiSigAOConfig(
    unsigned int uiBoardNumber,
    unsigned char *pucDemuxChanList,
    unsigned int uiDemuxChanListCount,
    unsigned long ulTicks,
    int iTriggerMode,
    int iExtTriggerEdge);


int me4000MultiSigAOWraparound(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    unsigned long ulLoops,
    int iExecutionMode,
    ME4000_P_AO_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int me4000MultiSigAOContinuous(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    ME4000_P_AO_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned long ulTimeOutSeconds,
    unsigned long* pulNumberOfValuesWritten);


int me4000MultiSigAOStart(
    unsigned int uiBoardNumber);


int me4000MultiSigAOAppendNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToAppend,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesAppended);


int me4000MultiSigAOStop(
    unsigned int uiBoardNumber,
    int iStopMode);


int me4000MultiSigAOVoltToDigit(
    double dVolt,
    short* psDigit);