ME_4600/MESDK/ME-4000/VBasic/ME4000.bas


Declare Function me4000CntRead Lib "me4000Ex.dll" Alias "_me4000VB_CntRead@12" (ByVal lBoardNumber As Long, ByVal lCounter As Long, ByRef plValue As Long) As Long

Declare Function me4000CntPWMStart Lib "me4000Ex.dll" Alias "_me4000VB_CntPWMStart@8" (ByVal lBoardNumber As Long, ByVal lPreScaler As Long, ByVal lDutyCycle As Long) As Long

Declare Function me4000CntPWMStop Lib "me4000Ex.dll" Alias "_me4000VB_CntPWMStop@4" (ByVal lBoardNumber As Long) As Long


'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                         External interrupt Routines                           |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000ExtIrqEnable Lib "me4000Ex.dll" Alias "_me4000VB_ExtIrqEnable@12" (ByVal lBoardNumber As Long, ByVal pExtIrqProc As Long, ByVal lExtIrqContext As Long) As Long

Declare Function me4000ExtIrqDisable Lib "me4000Ex.dll" Alias "_me4000VB_ExtIrqDisable@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000ExtIrqGetCount Lib "me4000Ex.dll" Alias "_me4000VB_ExtIrqGetCount@8" (ByVal lBoardNumber As Long, ByRef plIrqCount As Long) As Long

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                       DIO Bit Pattern Routines                                |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000DIOBPPortConfig Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPPortConfig@12" (ByVal lBoardNumber As Long, ByVal lPortNumber As Long, ByVal lOutputMode As Long) As Long

Declare Function me4000DIOBPConfig Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPConfig@16" (ByVal lBoardNumber As Long, ByVal lTicks As Long, ByVal lTriggerMode As Long, ByVal lExtTrigegrEdge As Long) As Long

Declare Function me4000DIOBPWraparound Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPWraparound@32" (ByVal lBoardNumber As Long, ByRef piDataBuffer As Integer, ByVal lDataCount As Long, ByVal lLoops As Long, ByVal lExecutionMode As Long, ByVal pTerminateProc As Long, ByVal lTerminateContext As Long, ByVal lTimeOutSeconds As Long) As Long

Declare Function me4000IOBPContinuous Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPContinuous@32" (ByVal lBoardNumber As Long, ByRef piDataBuffer As Integer, ByVal lDataCount As Long, ByVal pCallbackProc As Long, ByVal lCallbackContext As Long, ByVal lTimeOutSeconds As Long, ByRef plNumberOfValuesWritten As Long) As Long

Declare Function me4000DIOBPStart Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPStart@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000DIOBPAppendNewValues Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPAppendNewValues@20" (ByVal lBoardNumber As Long, ByRef piDataBuffer As Integer, ByVal lNumberOfValuesToAppend As Long, ByVal lExecutionMode As Long, ByRef plNumberOfValuesAppended As Long) As Long

Declare Function me4000DIOBPStop Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPStop@8" (ByVal lBoardNumber As Long, lStopMode As Long) As Long

Declare Function me4000DIOBPReset Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPReset@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000DIOBPGetStatus Lib "me4000Ex.dll" Alias "_me4000VB_DIOBPGetStatus@12" (ByVal lBoardNumber As Long, ByVal lWaitIdle As Long, ByRef plStatus As Long) As Long

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                            MultiSig Routines                                  |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000MultiSigOpen Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigOpen@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000MultiSigReset Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigReset@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000MultiSigAddressLED Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAddressLED@12" (ByVal lBoardNumber As Long, ByVal lBase As Long, ByVal lLEDStatus As Long) As Long

Declare Function me4000MultiSigSetGain Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigSetGain@16" (ByVal lBoardNumber As Long, ByVal lBase As Long, ByVal lChannelGroup As Long, ByVal lGain As Long) As Long

Declare Function me4000MultiSigClose Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigClose@4" (ByVal lBoardNumber As Long) As Long

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                            MultiSigAI Routines                                |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000MultiSigAIOpen Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIOpen@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000MultiSigAISingle Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAISingle@32" (ByVal lBoardNumber As Long, ByVal lAIChannelNumber As Long, ByVal lMuxChannelNumber, ByVal lGain As Long, ByVal lTriggerMode As Long, ByVal lExtTriggerEdge As Long, ByVal lTimeOutSeconds As Long, ByRef piDigitalValue As Integer) As Long

Declare Function me4000MultiSigAIConfig Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIConfig@44" (ByVal lBoardNumber As Long, ByVal lAIChannelNumber As Long, ByRef pbMuxChanList As Byte, ByVal lChanListCount As Long, ByVal lReserved As Long, ByVal lChanTicks As Long, ByVal lScanTicksLow As Long, ByVal lScanTicksHigh As Long, ByVal lAcMode As Long, ByVal lExtTriggerMode As Long, ByVal lExtTriggerEdge As Long) As Long

Declare Function me4000MultiSigAIScan Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIScan@44" (ByVal lBoardNumber As Long, ByVal lNumberOfMuxLists As Long, ByRef piBuffer As Integer, ByVal lBufferSizeValues As Long, ByVal lExecutionMode As Long, ByVal pCallbackProc As Long, ByVal lCallbackContext As Long, ByVal lRefreshFrequency As Long, ByVal pTerminateProc As Long, ByVal lTerminateContext As Long, ByVal lTimeOutSeconds As Long) As Long

Declare Function me4000MultiSigAIContinuous Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIContinuous@20" (ByVal lBoardNumber As Long, ByVal pCallbackProc As Long, ByVal lCallbackContext As Long, ByVal lRefreshFrequency As Long, lTimeOutSeconds As Long) As Long

Declare Function me4000MultiSigAIStart Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIStart@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000MultiSigAIGetNewValues Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIGetNewValues@24" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal lNumberOfValuesToRead As Long, ByVal lExecutionMode As Long, ByRef plNumberofValuesRead As Long, ByRef piLastError As Long) As Long

Declare Function me4000MultiSigAIStop Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIStop@8" (ByVal lBoardNumber As Long, ByVal lReserved As Long) As Long

Declare Function me4000MultiSigAIExtractValues Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIExtractValues@32" (ByVal lMuxChannelNumber As Long, ByRef piAIBuffer As Integer, ByVal lAIDataCount As Long, ByRef pbMuxChanList As Byte, ByVal lMuxChanListCount As Long, ByRef piChanBuffer As Integer, ByVal lChanBufferSizeValues As Long, ByRef plChanDataCount As Long) As Long

Declare Function me4000MultiSigAIDigitToSize Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIDigitToSize@20" (ByVal iDigit As Integer, ByVal lGain As Long, ByVal lModuleType As Long, ByVal dIMeasured As Double, ByRef pdSize As Double) As Long

Declare Function me4000MultiSigAIReset Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIReset@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000MultiSigAIGetStatus Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIGetStatus@12" (ByVal lBoardNumber As Long, ByVal lWaitIdle As Long, ByRef plStatus As Long) As Long

Declare Function me4000MultiSigAIClose Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAIClose@4" (ByVal lBoardNumber As Long) As Long

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                            MultiSigAO Routines                                |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000MultiSigAOOpen Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOOpen@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000MultiSigAOSingle Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOSingle@24" (ByVal lBoardNumber As Long, ByVal lDemuxChannelNumber As Long, ByVal lTriggerMode As Long, ByVal lExtTriggerEdge As Long, ByVal lTimeOutSeconds As Long, ByVal iValue As Integer) As Long

Declare Function me4000MultiSigAOConfig Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOConfig@24" (ByVal lBoardNumber As Long, ByRef pbDemuxChanList As Byte, ByVal lDemuxChanListCount As Long, ByVal lTicks As Long, ByVal lTriggerMode As Long, ByVal lExtTriggerEdge As Long) As Long

Declare Function me4000MultiSigAOWraparound Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOWraparound@32" (ByVal lBoardNumber As Long, ByRef piDataBuffer As Integer, ByVal lDataCount As Long, ByVal lLoops As Long, ByVal lExecutionMode As Long, ByVal pTerminateProc As Long, ByVal lTerminateContext As Long, ByVal lTimeOutSeconds As Long) As Long

Declare Function me4000MultiSigAOContinuous Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOContinuous@28" (ByVal lBoardNumber As Long, ByRef piDataBuffer As Integer, ByVal lDataCount As Long, ByVal pCallbackProc As Long, ByVal lCallbackContext As Long, ByVal lTimeOutSeconds As Long, ByRef plNumberOfValuesWritten As Long) As Long

Declare Function me4000MultiSigAOStart Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOStart@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000MultiSigAOAppendNewValues Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOAppendNewValues@20" (ByVal lBoardNumber As Long, ByRef piDataBuffer As Integer, ByVal lNumberOfValuesToAppend As Long, ByVal lExecutionMode As Long, ByRef plNumberOfValuesAppended As Long) As Long

Declare Function me4000MultiSigAOStop Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOStop@8" (ByVal lBoardNumber As Long, ByVal lStopMode As Long) As Long

Declare Function me4000MultiSigAOVoltToDigit Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOVoltToDigit@8" (ByVal dVolts As Double, ByRef piDigit As Integer) As Long
